# worktree-link

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  lefthook.yml  mise.toml  release-plz.toml  release.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: cli.rs  config.rs  error.rs  git.rs  linker.rs  main.rs  walker.rs
