[package]
name = "worktree-link"
version = "0.1.3"
edition = "2021"
description = "Automatically create symlinks from a main worktree to a new worktree based on .worktreelinks patterns"
license = "MIT"
repository = "https://github.com/km-tr/worktree-link"
homepage = "https://github.com/km-tr/worktree-link"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
anyhow = "1"
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config for 'dist build'
[profile.dist]
inherits = "release"
lto = "thin"
